<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.panjidwisatrio.mangaboytwo.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.panjidwisatrio.mangaboytwo.ui.schedule.ScheduleFragment"
        android:label="@string/jadwal"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/genreFragment"
        android:name="com.panjidwisatrio.mangaboytwo.ui.genre.GenreFragment"
        android:label="@string/genre"
        tools:layout="@layout/fragment_genre" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.panjidwisatrio.mangaboytwo.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.panjidwisatrio.mangaboytwo.ui.about.AboutFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about" />
</navigation>