<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="0dp"
        tools:ignore="NotSibling">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="90dp"

            android:background="@color/white"
            android:elevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:fontFamily="@font/sf_compact_semibold"
                    android:textSize="25sp"/>

            </LinearLayout>

        </Toolbar>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:id="@+id/slider_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="40dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/slider_iv"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/popular"
                    android:fontFamily="@font/sf_compact_semibold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_manga_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_horizontal_manga"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/terbaru"
                    android:fontFamily="@font/sf_compact_semibold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_manga_grid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_horizontal_manga"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </com.google.android.material.appbar.AppBarLayout>


</LinearLayout>